objects/Reminder_Settings__mdt.object
<CustomObject>
    <description>Specifies interval lengths and email templates to use when sending out reminders.</description>
    <fields>
        <fullName>Alternate_Email_Template_Name_1__c</fullName>
        <label>Alternate Email Template Name 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_Template_Name_2__c</fullName>
        <label>Alternate Email Template Name 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_Template_Name_3__c</fullName>
        <label>Alternate Email Template Name 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_RT_Should_Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate RT Should Reassign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Record_Types__c</fullName>
        <label>Alternate Record Types</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name_1__c</fullName>
        <description>The name of the email sent out after the first interval.</description>
        <label>Email Template Name 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name_2__c</fullName>
        <description>The name of the email sent out after the second interval.</description>
        <label>Email Template Name 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name_3__c</fullName>
        <label>Email Template Name 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interval_Length_1__c</fullName>
        <description>The length of the first interval, in the units specified by the Interval_Unit__c field.</description>
        <label>Interval Length 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval_Length_2__c</fullName>
        <description>The length of the second interval, in the units specified by the Interval_Unit__c field.</description>
        <label>Interval Length 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval_Length_3__c</fullName>
        <description>The length of the third interval, in the units specified by the Interval_Unit__c field.</description>
        <label>Interval Length 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval_Unit__c</fullName>
        <description>Specifies the amount of time between actions.</description>
        <label>Interval Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Days</fullName>
                    <default>true</default>
                    <label>Business Days</label>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Sources__c</fullName>
        <label>Lead Sources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Types__c</fullName>
        <description>Comma separated list of record types.</description>
        <label>Record Types</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Should_Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should Reassign</label>
        <type>Checkbox</type>
    </fields>
    <label>Reminder Setting</label>
    <pluralLabel>Reminder Settings</pluralLabel>
</CustomObject>